# agent-personal-space

./: AGENT.md  README.md  pyproject.toml  wrangler.toml
agent_personal_space/: __init__.py  access.py  boundary.py  negotiator.py  violations.py  zone.py
src/: worker.ts
tests/: test_access.py  test_boundary.py  test_negotiator.py  test_violations.py  test_zone.py
